WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
257892
MS Teams browser meeting IncomingAudioMediaStreamTrackRendererUnit crashes with failed: Bad bounds passed to std::clamp
https://bugs.webkit.org/show_bug.cgi?id=257892
Summary
MS Teams browser meeting IncomingAudioMediaStreamTrackRendererUnit crashes wi...
Kimmo Kinnunen
Reported
2023-06-09 08:54:39 PDT
MS Teams browser meeting IncomingAudioMediaStreamTrackRendererUnit crashes with failed: Bad bounds passed to std::clamp
Attachments
invalid algorithm reproduction 1
(1.56 KB, text/x-csrc)
2023-06-09 08:56 PDT
,
Kimmo Kinnunen
no flags
Details
invalid algorithm reproduction 2 (simpler example)
(1017 bytes, text/x-csrc)
2023-06-09 08:56 PDT
,
Kimmo Kinnunen
no flags
Details
View All
Add attachment
proposed patch, testcase, etc.
Kimmo Kinnunen
Comment 1
2023-06-09 08:55:09 PDT
<
rdar://110382833
>
Kimmo Kinnunen
Comment 2
2023-06-09 08:55:32 PDT
Attached two reproductions of invalid synchronization algorithm for the time bounds
Kimmo Kinnunen
Comment 3
2023-06-09 08:56:18 PDT
Created
attachment 466648
[details]
invalid algorithm reproduction 1
Kimmo Kinnunen
Comment 4
2023-06-09 08:56:42 PDT
Created
attachment 466649
[details]
invalid algorithm reproduction 2 (simpler example)
Kimmo Kinnunen
Comment 5
2023-06-09 09:25:55 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/14813
EWS
Comment 6
2023-06-13 05:05:37 PDT
Committed
265117@main
(6dc46a71a3e1): <
https://commits.webkit.org/265117@main
> Reviewed commits have been landed. Closing PR #14813 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug